1. Changed the field type at CoffeeRecord. 2. Improved the code style. 3. Corrected the tests.